# evo-python-lab-2022-online-version

./: README.md  setup.md
wellcome/: .dockerignore  .gitignore  Dockerfile  docker-compose.debug.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
wellcome/login/: admin.py  forms.py  models.py  urls.py  views.py
wellcome/login/fixtures/: db.json
wellcome/login/migrations/: 0001_initial.py  0002_auto_20220120_1429.py  0003_alter_person_first_name.py  0004_alter_person_last_name.py  0005_auto_20220120_1722.py  0006_auto_20220120_1723.py  0007_auto_20220120_1723.py  0008_alter_person_unique_together.py  0009_auto_20220120_1741.py
wellcome/login/static/css/: style.css
wellcome/login/templates/: base.html  home.html  login_done.html  start.html  wellcome.html
wellcome/wellcome/: asgi.py  settings.py  urls.py  wsgi.py
