[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["LaKyXa-ctrl-V <lakyxamersh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
